--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
           <form action="#" name="newform" method="post">
             <div class="form__inputs">
               <p>Name <span class="red"> * </span></p> 
-              <input type="text">
+              <input class="text__input" type="text">
               <p>Email address <span class="red"> * </span></p> 
-              <input type="text">
+              <input class="text__input" type="text">
             </div>
             <p>Message <span class="red"> * </span></p> 
             <textarea name="text"></textarea>
